@@ -12,7 +12,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
 #
-# RCS: @(#) $Id: http.test,v 1.33.4.12 2009/04/10 18:09:30 dgp Exp $
+# RCS: @(#) $Id: http.test,v 1.33.4.13 2009/06/24 15:18:47 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -331,16 +331,24 @@ test http-3.23 {http::geturl parse failures} -body {
 test http-3.24 {http::geturl parse failures} -body {
     http::geturl http://somewhere/path?%query
 } -returnCodes error -result {Illegal encoding character usage "%qu" in URL path}
-test http-3.25 {http::meta} {
+test http-3.25 {http::meta} -setup {
+    unset -nocomplain m token
+} -body {
     set token [http::geturl $url -timeout 2000]
     array set m [http::meta $token]
     lsort [array names m]
-} {Content-Length Content-Type Date}
-test http-3.26 {http::meta} {
+} -cleanup {
+    unset -nocomplain m token
+} -result {Content-Length Content-Type Date}
+test http-3.26 {http::meta} -setup {
+    unset -nocomplain m token
+} -body {
     set token [http::geturl $url -headers {X-Check 1} -timeout 2000]
     array set m [http::meta $token]
     lsort [array names m]
-} {Content-Length Content-Type Date X-Check}
+} -cleanup {
+    unset -nocomplain m token
+} -result {Content-Length Content-Type Date X-Check}
 
 test http-4.1 {http::Event} {
     set token [http::geturl $url -keepalive 0]
